--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,1 +1,10 @@
-<h1 class="text-center">OpenWeatherAPI Takehome Project</h1>
+<h1 class="text-center m-2"> OpenWeatherMap API TakeHome Project</h1>
+<div class="container m-2">
+    <div class="row p-5 col-sm-6 offset-6">
+        <form action="/" method="post">
+        <label for="city">City: </label>
+        <input type="text" name="city" placeholder="Your city here" class="text-center">
+        <button type="submit" class="btn btn-primary p-2 ml-2">Get Weather</button>
+        </form>
+    </div>
+</div>
